# 0-ads

./: .gitignore  Cargo.toml  DISCLAIMER.md  Dockerfile  README.md  ROADMAP.md  billboard.json
agents/skills/: 0-ads-hunter.skill
audit/: AUDIT_REPORT.md  AUDIT_REPORT_GPT-5.3-CODEX.md  AdEscrow_Audit_Report.md  BLACKHAT_AUDIT_REPORT.md  Full_System_Audit_Report.md  Update_Audit_Review_V2.md  Update_Audit_Review_V3.md  V4_Remediation_Report.md
backend/: gasless_relayer.py  oracle_anti_sybil.py  universal_oracle.py
contracts/: AdEscrow.sol
contracts/evm/: .gitignore  bypass_claim.js  check_campaign.js  claim_script.js  dev_oracle_self_claim.js  hardhat.config.js  package-lock.json  package.json
contracts/evm/contracts/: AdEscrow.sol
contracts/evm/contracts/test/: DevnetUSDC.sol  MockFeeToken.sol
contracts/evm/scripts/: create_genesis_campaign.js  deploy.js  deploy_dusdc.js  deploy_mainnet.js  deploy_usd0.js
contracts/evm/test/: AdEscrow.test.js
contracts/solana_anchor/: Anchor.toml  package.json
contracts/solana_anchor/src/: lib.rs
contracts/solana_anchor/tests/: zero_ads.ts
docs/: V1_COMPROMISED_DEPRECATION.md
docs/sun_parliament/: V2_HARD_FORK_EXECUTED.md  phase_28_evolution.md  phase_29_evolution.md  phase_30_evolution.md  phase_31_evolution.md  phase_32_evolution.md
python/: README.md  setup.py
python/zero_ads_sdk/: __init__.py  cli.py  client.py  mcp_server.py
python/zero_ads_sdk/examples/: claim_bounty.py  gasless_claim.py
schema/: 0-ads.capnp
scripts/: audit_guard.sh  genesis.py
scripts/deploy/: deploy_v2_secure.sh
skills/0-ads-zk-claimer/: SKILL.md
src/: dashboard.html  lib.rs  main.rs  network.rs  oracle.rs  zk_verifier.rs
tasks/: PHASE3_ARCHITECTURE.md  todo.md
