[package]
name = "zero-ads-node"
version = "0.1.0"
edition = "2021"
description = "The P2P Billboard Node for the 0-ads Attention Network"
authors = ["0-protocol <sjhddh>"]

[dependencies]
zerolang = { git = "https://github.com/0-protocol/0-lang", rev = "1b66d00" }
libp2p = { version = "0.53", features = ["tokio", "gossipsub", "tcp", "noise", "yamux", "macros"] }
tokio = { version = "1.32", features = ["full"] }
axum = "0.6"
tower-http = { version = "0.4", features = ["cors"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
k256 = { version = "0.13", features = ["ecdsa"] }
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
dashmap = "5.5"
parking_lot = "0.12"
zeroize = "1"

[patch.crates-io]
time = "=0.3.36"
